# nautil

./: .gitignore  README.md  __main__.py  pyproject.toml
docs/: astro.config.mjs  package-lock.json
docs/src/components/: Flag.astro  Project.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guide/: custom-action.mdx  custom-output.mdx  custom-plugin.mdx  get-started.mdx  install.mdx  using-artifacts.mdx  using-sources.mdx
docs/src/content/docs/plugin/: nautil-mc.mdx  nautil-utils.mdx
docs/src/fonts/: font-face.css
docs/src/styles/: custom.css
nautil/: __init__.py
nautil/core/: __init__.py  artifact.py  output_format.py  source.py
nautil/plugin/: __init__.py  action.py
nautil/source/: __init__.py  git.py  local.py
